--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -8,7 +8,7 @@ env:
   DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
   DOCKERHUB_TOKEN: ${{ secrets.DOCKERHUB_TOKEN }}
   IMAGE_NAME: nazawsze/caddy-dnspod
-  TAGS_NAME: 2.7.6-alpine
+  VERSION_TAG: 2.7.6-alpine
 
 jobs:
   build-and-push:
@@ -28,4 +28,6 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ env.IMAGE_NAME }}:${{ env.TAGS_NAME }}
+          tags: |
+            ${{ env.IMAGE_NAME }}:${{ env.VERSION_TAG }}
+            ${{ env.IMAGE_NAME }}:latest
